tests/integration/snapshots/integration__commands__format__OBJECT_BLANK_LINES_BETWEEN_KEYS.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{ "hi": "hi",


"bye": "Bye"

}
stdout ---
{
  "hi": "hi",
  "bye": "Bye"
}

stderr ---
