tests/integration/snapshots/integration__commands__format__OBJECT_INLINE_NESTED_OBJECT_VALUE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
{"k":{"a":1},"x":1}
stdout ---
{ "k": { "a": 1 }, "x": 1 }

stderr ---
